deploy: 7e82f4ca997484475f2f46903a9e46c4bf8196d5

--- a/doxygen_crawl.html
+++ b/doxygen_crawl.html
@@ -18,6 +18,7 @@
 <a href="linear__algebra_8hpp_source.html"/>
 <a href="pose_8hpp_source.html"/>
 <a href="proto__type_8hpp_source.html"/>
+<a href="proto__value_8hpp_source.html"/>
 <a href="service__helper_8hpp_source.html"/>
 <a href="utils_8hpp_source.html"/>
 <a href="world__state_8hpp_source.html"/>
@@ -317,6 +318,14 @@
 <a href="classviam_1_1sdk_1_1GRPCException-members.html"/>
 <a href="classviam_1_1sdk_1_1HandlerMap__.html"/>
 <a href="classviam_1_1sdk_1_1HandlerMap__-members.html"/>
+<a href="structviam_1_1sdk_1_1kind__t.html"/>
+<a href="structviam_1_1sdk_1_1kind__t_3_01bool_01_4.html"/>
+<a href="structviam_1_1sdk_1_1kind__t_3_01double_01_4.html"/>
+<a href="structviam_1_1sdk_1_1kind__t_3_01int_01_4.html"/>
+<a href="structviam_1_1sdk_1_1kind__t_3_01ProtoStruct_01_4.html"/>
+<a href="structviam_1_1sdk_1_1kind__t_3_01std_1_1nullptr__t_01_4.html"/>
+<a href="structviam_1_1sdk_1_1kind__t_3_01std_1_1string_01_4.html"/>
+<a href="structviam_1_1sdk_1_1kind__t_3_01std_1_1vector_3_01ProtoValue_01_4_01_4.html"/>
 <a href="classviam_1_1sdk_1_1LinkConfig.html"/>
 <a href="classviam_1_1sdk_1_1LinkConfig-members.html"/>
 <a href="classviam_1_1sdk_1_1MLModelService.html"/>
@@ -405,6 +414,8 @@
 <a href="structviam_1_1sdk_1_1PowerSensor_1_1voltage-members.html"/>
 <a href="classviam_1_1sdk_1_1ProtoType.html"/>
 <a href="classviam_1_1sdk_1_1ProtoType-members.html"/>
+<a href="classviam_1_1sdk_1_1ProtoValue.html"/>
+<a href="classviam_1_1sdk_1_1ProtoValue-members.html"/>
 <a href="structviam_1_1sdk_1_1quaternion.html"/>
 <a href="structviam_1_1sdk_1_1quaternion-members.html"/>
 <a href="classviam_1_1sdk_1_1Reconfigurable.html"/>
@@ -541,6 +552,9 @@
 <a href="classviam_1_1sdk_1_1impl_1_1ServoClient-members.html"/>
 <a href="classviam_1_1sdk_1_1impl_1_1ServoServer.html"/>
 <a href="classviam_1_1sdk_1_1impl_1_1ServoServer-members.html"/>
+<a href="structviam_1_1sdk_1_1proto__value__details_1_1all__moves__noexcept.html"/>
+<a href="structviam_1_1sdk_1_1proto__value__details_1_1move__may__throw.html"/>
+<a href="structviam_1_1sdk_1_1proto__value__details_1_1move__may__throw-members.html"/>
 <a href="structviam_1_1sdk_1_1prototype__details_1_1get__helper.html"/>
 <a href="structviam_1_1sdk_1_1prototype__details_1_1get__helper-members.html"/>
 <a href="structviam_1_1sdk_1_1prototype__details_1_1get__helper_3_01AttributeMap_01_4.html"/>
@@ -604,10 +618,12 @@
 <a href="functions_func_g.html"/>
 <a href="functions_func_h.html"/>
 <a href="functions_func_i.html"/>
+<a href="functions_func_k.html"/>
 <a href="functions_func_l.html"/>
 <a href="functions_func_m.html"/>
 <a href="functions_func_n.html"/>
 <a href="functions_func_o.html"/>
+<a href="functions_func_p.html"/>
 <a href="functions_func_r.html"/>
 <a href="functions_func_s.html"/>
 <a href="functions_func_t.html"/>
@@ -632,6 +648,7 @@
 <a href="functions_type.html"/>
 <a href="functions_type.html"/>
 <a href="functions_enum.html"/>
+<a href="functions_rela.html"/>
 <a href="files.html"/>
 </body>
 </html>
