deploy: 7d4870513b56742c973cc306fcac5c8614a32d5b

--- a/doxygen_crawl.html
+++ b/doxygen_crawl.html
@@ -19,6 +19,7 @@
 <a href="pose_8hpp_source.html"/>
 <a href="proto__type_8hpp_source.html"/>
 <a href="proto__value_8hpp_source.html"/>
+<a href="proto__value__visit_8hpp_source.html"/>
 <a href="service__helper_8hpp_source.html"/>
 <a href="utils_8hpp_source.html"/>
 <a href="world__state_8hpp_source.html"/>
@@ -147,6 +148,7 @@
 <a href="server_8hpp.html"/>
 <a href="deprecated.html"/>
 <a href="group__Exception.html"/>
+<a href="group__ProtoValueVisit.html"/>
 <a href="group__Arm.html"/>
 <a href="group__Base.html"/>
 <a href="group__Gantry.html"/>
@@ -318,14 +320,6 @@
 <a href="classviam_1_1sdk_1_1GRPCException-members.html"/>
 <a href="classviam_1_1sdk_1_1HandlerMap__.html"/>
 <a href="classviam_1_1sdk_1_1HandlerMap__-members.html"/>
-<a href="structviam_1_1sdk_1_1kind__t.html"/>
-<a href="structviam_1_1sdk_1_1kind__t_3_01bool_01_4.html"/>
-<a href="structviam_1_1sdk_1_1kind__t_3_01double_01_4.html"/>
-<a href="structviam_1_1sdk_1_1kind__t_3_01int_01_4.html"/>
-<a href="structviam_1_1sdk_1_1kind__t_3_01ProtoStruct_01_4.html"/>
-<a href="structviam_1_1sdk_1_1kind__t_3_01std_1_1nullptr__t_01_4.html"/>
-<a href="structviam_1_1sdk_1_1kind__t_3_01std_1_1string_01_4.html"/>
-<a href="structviam_1_1sdk_1_1kind__t_3_01std_1_1vector_3_01ProtoValue_01_4_01_4.html"/>
 <a href="classviam_1_1sdk_1_1LinkConfig.html"/>
 <a href="classviam_1_1sdk_1_1LinkConfig-members.html"/>
 <a href="classviam_1_1sdk_1_1MLModelService.html"/>
@@ -553,6 +547,21 @@
 <a href="classviam_1_1sdk_1_1impl_1_1ServoServer.html"/>
 <a href="classviam_1_1sdk_1_1impl_1_1ServoServer-members.html"/>
 <a href="structviam_1_1sdk_1_1proto__value__details_1_1all__moves__noexcept.html"/>
+<a href="structviam_1_1sdk_1_1proto__value__details_1_1kind.html"/>
+<a href="structviam_1_1sdk_1_1proto__value__details_1_1kind_3_01bool_01_4.html"/>
+<a href="structviam_1_1sdk_1_1proto__value__details_1_1kind_3_01bool_01_4-members.html"/>
+<a href="structviam_1_1sdk_1_1proto__value__details_1_1kind_3_01double_01_4.html"/>
+<a href="structviam_1_1sdk_1_1proto__value__details_1_1kind_3_01double_01_4-members.html"/>
+<a href="structviam_1_1sdk_1_1proto__value__details_1_1kind_3_01int_01_4.html"/>
+<a href="structviam_1_1sdk_1_1proto__value__details_1_1kind_3_01int_01_4-members.html"/>
+<a href="structviam_1_1sdk_1_1proto__value__details_1_1kind_3_01ProtoList_01_4.html"/>
+<a href="structviam_1_1sdk_1_1proto__value__details_1_1kind_3_01ProtoList_01_4-members.html"/>
+<a href="structviam_1_1sdk_1_1proto__value__details_1_1kind_3_01ProtoStruct_01_4.html"/>
+<a href="structviam_1_1sdk_1_1proto__value__details_1_1kind_3_01ProtoStruct_01_4-members.html"/>
+<a href="structviam_1_1sdk_1_1proto__value__details_1_1kind_3_01std_1_1nullptr__t_01_4.html"/>
+<a href="structviam_1_1sdk_1_1proto__value__details_1_1kind_3_01std_1_1nullptr__t_01_4-members.html"/>
+<a href="structviam_1_1sdk_1_1proto__value__details_1_1kind_3_01std_1_1string_01_4.html"/>
+<a href="structviam_1_1sdk_1_1proto__value__details_1_1kind_3_01std_1_1string_01_4-members.html"/>
 <a href="structviam_1_1sdk_1_1proto__value__details_1_1move__may__throw.html"/>
 <a href="structviam_1_1sdk_1_1proto__value__details_1_1move__may__throw-members.html"/>
 <a href="structviam_1_1sdk_1_1prototype__details_1_1get__helper.html"/>
@@ -647,6 +656,7 @@
 <a href="functions_type.html"/>
 <a href="functions_type.html"/>
 <a href="functions_type.html"/>
+<a href="functions_enum.html"/>
 <a href="functions_enum.html"/>
 <a href="functions_rela.html"/>
 <a href="files.html"/>
