deploy: f15299890a7dcf5a1202ccd977e5fc03ea725932

--- a/doxygen_crawl.html
+++ b/doxygen_crawl.html
@@ -22,6 +22,7 @@
 <a href="proto__value__visit_8hpp_source.html"/>
 <a href="service__helper_8hpp_source.html"/>
 <a href="utils_8hpp_source.html"/>
+<a href="version__metadata_8hpp_source.html"/>
 <a href="world__state_8hpp_source.html"/>
 <a href="arm_8hpp_source.html"/>
 <a href="base_8hpp_source.html"/>
