--- a/doxygen_crawl.html
+++ b/doxygen_crawl.html
@@ -17,6 +17,7 @@
 <a href="exception_8hpp_source.html"/>
 <a href="linear__algebra_8hpp_source.html"/>
 <a href="pose_8hpp_source.html"/>
+<a href="proto__utils_8hpp_source.html"/>
 <a href="private_2utils_8hpp_source.html"/>
 <a href="utils_8hpp_source.html"/>
 <a href="proto__value_8hpp_source.html"/>
@@ -91,12 +92,15 @@
 <a href="viam__grpc__channel_8hpp_source.html"/>
 <a href="server_8hpp_source.html"/>
 <a href="motion_8hpp_source.html"/>
+<a href="navigation_8hpp_source.html"/>
 <a href="mlmodel_8hpp_source.html"/>
 <a href="private_2mlmodel_8hpp_source.html"/>
 <a href="mlmodel__client_8hpp_source.html"/>
 <a href="mlmodel__server_8hpp_source.html"/>
 <a href="motion__client_8hpp_source.html"/>
 <a href="motion__server_8hpp_source.html"/>
+<a href="navigation__client_8hpp_source.html"/>
+<a href="navigation__server_8hpp_source.html"/>
 <a href="geometry_8hpp_source.html"/>
 <a href="orientation_8hpp_source.html"/>
 <a href="orientation__types_8hpp_source.html"/>
@@ -147,6 +151,8 @@
 <a href="resource__manager_8hpp.html"/>
 <a href="client_8hpp.html"/>
 <a href="server_8hpp.html"/>
+<a href="navigation_8hpp.html"/>
+<a href="navigation__server_8hpp.html"/>
 <a href="deprecated.html"/>
 <a href="group__Exception.html"/>
 <a href="group__ProtoValueVisit.html"/>
@@ -225,6 +231,8 @@
 <a href="structviam_1_1sdk_1_1API_1_1traits_3_01Motor_01_4-members.html"/>
 <a href="structviam_1_1sdk_1_1API_1_1traits_3_01MovementSensor_01_4.html"/>
 <a href="structviam_1_1sdk_1_1API_1_1traits_3_01MovementSensor_01_4-members.html"/>
+<a href="structviam_1_1sdk_1_1API_1_1traits_3_01Navigation_01_4.html"/>
+<a href="structviam_1_1sdk_1_1API_1_1traits_3_01Navigation_01_4-members.html"/>
 <a href="structviam_1_1sdk_1_1API_1_1traits_3_01PoseTracker_01_4.html"/>
 <a href="structviam_1_1sdk_1_1API_1_1traits_3_01PoseTracker_01_4-members.html"/>
 <a href="structviam_1_1sdk_1_1API_1_1traits_3_01PowerSensor_01_4.html"/>
@@ -383,6 +391,16 @@
 <a href="structviam_1_1sdk_1_1MovementSensor_1_1properties-members.html"/>
 <a href="classviam_1_1sdk_1_1Name.html"/>
 <a href="classviam_1_1sdk_1_1Name-members.html"/>
+<a href="classviam_1_1sdk_1_1Navigation.html"/>
+<a href="classviam_1_1sdk_1_1Navigation-members.html"/>
+<a href="structviam_1_1sdk_1_1Navigation_1_1LocationResponse.html"/>
+<a href="structviam_1_1sdk_1_1Navigation_1_1LocationResponse-members.html"/>
+<a href="structviam_1_1sdk_1_1Navigation_1_1Path.html"/>
+<a href="structviam_1_1sdk_1_1Navigation_1_1Path-members.html"/>
+<a href="structviam_1_1sdk_1_1Navigation_1_1Properties.html"/>
+<a href="structviam_1_1sdk_1_1Navigation_1_1Properties-members.html"/>
+<a href="structviam_1_1sdk_1_1Navigation_1_1Waypoint.html"/>
+<a href="structviam_1_1sdk_1_1Navigation_1_1Waypoint-members.html"/>
 <a href="structviam_1_1sdk_1_1obstacle__detector.html"/>
 <a href="structviam_1_1sdk_1_1obstacle__detector-members.html"/>
 <a href="classviam_1_1sdk_1_1Options.html"/>
@@ -529,6 +547,10 @@
 <a href="classviam_1_1sdk_1_1impl_1_1MovementSensorClient-members.html"/>
 <a href="classviam_1_1sdk_1_1impl_1_1MovementSensorServer.html"/>
 <a href="classviam_1_1sdk_1_1impl_1_1MovementSensorServer-members.html"/>
+<a href="classviam_1_1sdk_1_1impl_1_1NavigationClient.html"/>
+<a href="classviam_1_1sdk_1_1impl_1_1NavigationClient-members.html"/>
+<a href="classviam_1_1sdk_1_1impl_1_1NavigationServer.html"/>
+<a href="classviam_1_1sdk_1_1impl_1_1NavigationServer-members.html"/>
 <a href="classviam_1_1sdk_1_1impl_1_1PoseTrackerClient.html"/>
 <a href="classviam_1_1sdk_1_1impl_1_1PoseTrackerClient-members.html"/>
 <a href="classviam_1_1sdk_1_1impl_1_1PoseTrackerServer.html"/>
@@ -651,6 +673,7 @@
 <a href="functions_type.html"/>
 <a href="functions_type.html"/>
 <a href="functions_type.html"/>
+<a href="functions_enum.html"/>
 <a href="functions_enum.html"/>
 <a href="functions_enum.html"/>
 <a href="functions_rela.html"/>
