deploy: 7a55dd4ff87920e0b988b4d9b056560ca546fabb

--- a/doxygen_crawl.html
+++ b/doxygen_crawl.html
@@ -255,6 +255,8 @@
 <a href="structviam_1_1sdk_1_1Arm_1_1KinematicsDataUnspecified-members.html"/>
 <a href="structviam_1_1sdk_1_1Arm_1_1KinematicsDataURDF.html"/>
 <a href="structviam_1_1sdk_1_1Arm_1_1KinematicsDataURDF-members.html"/>
+<a href="structviam_1_1sdk_1_1Arm_1_1MoveOptions.html"/>
+<a href="structviam_1_1sdk_1_1Arm_1_1MoveOptions-members.html"/>
 <a href="structviam_1_1sdk_1_1axis__angles.html"/>
 <a href="structviam_1_1sdk_1_1axis__angles-members.html"/>
 <a href="classviam_1_1sdk_1_1Base.html"/>
