deploy: 8f977f90c5e441147baaf330e1ae36395e1437d1

--- a/resource__manager_8hpp.html
+++ b/resource__manager_8hpp.html
@@ -84,6 +84,7 @@ $(function() {
 <p>Defines a general-purpose resource manager.  
 <a href="#details">More...</a></p>
 <div class="textblock"><code>#include &lt;memory&gt;</code><br />
+<code>#include &lt;mutex&gt;</code><br />
 <code>#include &lt;string&gt;</code><br />
 <code>#include &lt;type_traits&gt;</code><br />
 <code>#include &lt;unordered_map&gt;</code><br />
