deploy: 5536ef8a079759dfa394a3955e1ad9bb042b659e

--- a/registry_8hpp.html
+++ b/registry_8hpp.html
@@ -86,9 +86,9 @@ $(function() {
 <div class="textblock"><code>#include &lt;string&gt;</code><br />
 <code>#include &lt;google/protobuf/descriptor.h&gt;</code><br />
 <code>#include &lt;google/protobuf/message.h&gt;</code><br />
-<code>#include &lt;grpcpp/channel.h&gt;</code><br />
 <code>#include &lt;grpcpp/impl/service_type.h&gt;</code><br />
 <code>#include &lt;grpcpp/server.h&gt;</code><br />
+<code>#include &lt;viam/sdk/common/grpc_client_fwd.hpp&gt;</code><br />
 <code>#include &lt;viam/sdk/config/resource.hpp&gt;</code><br />
 <code>#include &lt;viam/sdk/resource/resource.hpp&gt;</code><br />
 <code>#include &lt;viam/sdk/resource/resource_api.hpp&gt;</code><br />
