--- a/client_8hpp.html
+++ b/client_8hpp.html
@@ -85,7 +85,7 @@ $(function() {
 <a href="#details">More...</a></p>
 <div class="textblock"><code>#include &lt;string&gt;</code><br />
 <code>#include &lt;thread&gt;</code><br />
-<code>#include &lt;grpcpp/channel.h&gt;</code><br />
+<code>#include &lt;viam/sdk/common/grpc_client_fwd.hpp&gt;</code><br />
 <code>#include &lt;viam/sdk/common/pose.hpp&gt;</code><br />
 <code>#include &lt;viam/sdk/common/utils.hpp&gt;</code><br />
 <code>#include &lt;viam/sdk/common/world_state.hpp&gt;</code><br />
