deploy: 0f636c5cb91adcb51f2e4d6dff5d75a38f86b5ad

--- a/client_8hpp.html
+++ b/client_8hpp.html
@@ -83,9 +83,10 @@ $(function() {
 
 <p>gRPC client implementation for a <code>robot</code>.  
 <a href="#details">More...</a></p>
-<div class="textblock"><code>#include &lt;string&gt;</code><br />
+<div class="textblock"><code>#include &lt;atomic&gt;</code><br />
+<code>#include &lt;string&gt;</code><br />
 <code>#include &lt;thread&gt;</code><br />
-<code>#include &lt;viam/sdk/common/grpc_client_fwd.hpp&gt;</code><br />
+<code>#include &lt;viam/sdk/common/grpc_fwd.hpp&gt;</code><br />
 <code>#include &lt;viam/sdk/common/pose.hpp&gt;</code><br />
 <code>#include &lt;viam/sdk/common/utils.hpp&gt;</code><br />
 <code>#include &lt;viam/sdk/common/world_state.hpp&gt;</code><br />
