--- a/server_8hpp.html
+++ b/server_8hpp.html
@@ -83,9 +83,7 @@ $(function() {
 
 <p>Defines the <code>Server</code> class.  
 <a href="#details">More...</a></p>
-<div class="textblock"><code>#include &lt;grpcpp/impl/service_type.h&gt;</code><br />
-<code>#include &lt;grpcpp/security/server_credentials.h&gt;</code><br />
-<code>#include &lt;grpcpp/server_builder.h&gt;</code><br />
+<div class="textblock"><code>#include &lt;viam/sdk/common/grpc_fwd.hpp&gt;</code><br />
 <code>#include &lt;viam/sdk/resource/resource.hpp&gt;</code><br />
 <code>#include &lt;viam/sdk/resource/resource_api.hpp&gt;</code><br />
 <code>#include &lt;viam/sdk/resource/resource_server_base.hpp&gt;</code><br />
