deploy: ddbf8524dd6b2828ed80124ca45ed2b2d96662a9

--- a/exception_8hpp.html
+++ b/exception_8hpp.html
@@ -85,10 +85,10 @@ $(function() {
 
 <p>Defines custom exceptions for the SDK.  
 <a href="#details">More...</a></p>
-<div class="textblock"><code>#include &lt;grpcpp/support/status.h&gt;</code><br />
+<div class="textblock"><code>#include &lt;memory&gt;</code><br />
 <code>#include &lt;stdexcept&gt;</code><br />
 <code>#include &lt;string&gt;</code><br />
-<code>#include &lt;viam/sdk/resource/resource_api.hpp&gt;</code><br />
+<code>#include &lt;system_error&gt;</code><br />
 </div>
 <p><a href="exception_8hpp_source.html">Go to the source code of this file.</a></p>
 <table class="memberdecls">
