--- a/doxygen_crawl.html
+++ b/doxygen_crawl.html
@@ -766,6 +766,7 @@
 <a href="functions_enum.html"/>
 <a href="functions_enum.html"/>
 <a href="functions_enum.html"/>
+<a href="functions_enum.html"/>
 <a href="functions_rela.html"/>
 <a href="files.html"/>
 </body>
