deploy: 117de3596e93b0fbb3bd1e8fe0790d7a37c44b19

--- a/classviam_1_1sdk_1_1Service.html
+++ b/classviam_1_1sdk_1_1Service.html
@@ -90,18 +90,20 @@ $(function() {
  <div class="center">
   <img src="classviam_1_1sdk_1_1Service.png" usemap="#viam::sdk::Service_map" alt=""/>
   <map id="viam::sdk::Service_map" name="viam::sdk::Service_map">
-<area href="classviam_1_1sdk_1_1Resource.html" alt="viam::sdk::Resource" shape="rect" coords="708,0,934,24"/>
+<area href="classviam_1_1sdk_1_1Resource.html" alt="viam::sdk::Resource" shape="rect" coords="826,0,1052,24"/>
 <area href="classSummation.html" alt="Summation" shape="rect" coords="118,112,344,136"/>
-<area href="classviam_1_1sdk_1_1GenericService.html" title="A GenericService represents any service that can execute arbitrary commands." alt="viam::sdk::GenericService" shape="rect" coords="472,112,698,136"/>
-<area href="classviam_1_1sdk_1_1MLModelService.html" title="Represents a machine trained learning model instance." alt="viam::sdk::MLModelService" shape="rect" coords="708,112,934,136"/>
-<area href="classviam_1_1sdk_1_1Motion.html" title="The Motion service coordinates motion planning across all components of a given robot...." alt="viam::sdk::Motion" shape="rect" coords="944,112,1170,136"/>
-<area href="classviam_1_1sdk_1_1Navigation.html" alt="viam::sdk::Navigation" shape="rect" coords="1180,112,1406,136"/>
+<area href="classviam_1_1sdk_1_1Discovery.html" title="A Discovery service is used to discover resources that are physically connected to your machine." alt="viam::sdk::Discovery" shape="rect" coords="472,112,698,136"/>
+<area href="classviam_1_1sdk_1_1GenericService.html" title="A GenericService represents any service that can execute arbitrary commands." alt="viam::sdk::GenericService" shape="rect" coords="708,112,934,136"/>
+<area href="classviam_1_1sdk_1_1MLModelService.html" title="Represents a machine trained learning model instance." alt="viam::sdk::MLModelService" shape="rect" coords="944,112,1170,136"/>
+<area href="classviam_1_1sdk_1_1Motion.html" title="The Motion service coordinates motion planning across all components of a given robot...." alt="viam::sdk::Motion" shape="rect" coords="1180,112,1406,136"/>
+<area href="classviam_1_1sdk_1_1Navigation.html" alt="viam::sdk::Navigation" shape="rect" coords="1416,112,1642,136"/>
 <area href="classMySummation.html" alt="MySummation" shape="rect" coords="0,168,226,192"/>
 <area href="classSummationClient.html" alt="SummationClient" shape="rect" coords="236,168,462,192"/>
-<area href="classviam_1_1sdk_1_1impl_1_1GenericServiceClient.html" title="gRPC client implementation of a GenericService." alt="viam::sdk::impl::GenericServiceClient" shape="rect" coords="472,168,698,192"/>
-<area href="classviam_1_1sdk_1_1impl_1_1MLModelServiceClient.html" alt="viam::sdk::impl::MLModelServiceClient" shape="rect" coords="708,168,934,192"/>
-<area href="classviam_1_1sdk_1_1impl_1_1MotionClient.html" title="gRPC client implementation of a Motion service." alt="viam::sdk::impl::MotionClient" shape="rect" coords="944,168,1170,192"/>
-<area href="classviam_1_1sdk_1_1impl_1_1NavigationClient.html" title="gRPC client implementation of a Navigation service." alt="viam::sdk::impl::NavigationClient" shape="rect" coords="1180,168,1406,192"/>
+<area href="classviam_1_1sdk_1_1impl_1_1DiscoveryClient.html" title="gRPC client implementation of a Discovery service." alt="viam::sdk::impl::DiscoveryClient" shape="rect" coords="472,168,698,192"/>
+<area href="classviam_1_1sdk_1_1impl_1_1GenericServiceClient.html" title="gRPC client implementation of a GenericService." alt="viam::sdk::impl::GenericServiceClient" shape="rect" coords="708,168,934,192"/>
+<area href="classviam_1_1sdk_1_1impl_1_1MLModelServiceClient.html" alt="viam::sdk::impl::MLModelServiceClient" shape="rect" coords="944,168,1170,192"/>
+<area href="classviam_1_1sdk_1_1impl_1_1MotionClient.html" title="gRPC client implementation of a Motion service." alt="viam::sdk::impl::MotionClient" shape="rect" coords="1180,168,1406,192"/>
+<area href="classviam_1_1sdk_1_1impl_1_1NavigationClient.html" title="gRPC client implementation of a Navigation service." alt="viam::sdk::impl::NavigationClient" shape="rect" coords="1416,168,1642,192"/>
   </map>
 </div></div>
 <table class="memberdecls">
