--- a/doxygen_crawl.html
+++ b/doxygen_crawl.html
@@ -84,10 +84,13 @@
 <a href="message__sizes_8hpp_source.html"/>
 <a href="viam__grpc__channel_8hpp_source.html"/>
 <a href="server_8hpp_source.html"/>
+<a href="discovery_8hpp_source.html"/>
 <a href="components_2generic_8hpp_source.html"/>
 <a href="services_2generic_8hpp_source.html"/>
 <a href="motion_8hpp_source.html"/>
 <a href="navigation_8hpp_source.html"/>
+<a href="discovery__client_8hpp_source.html"/>
+<a href="discovery__server_8hpp_source.html"/>
 <a href="components_2private_2generic__client_8hpp_source.html"/>
 <a href="services_2private_2generic__client_8hpp_source.html"/>
 <a href="components_2private_2generic__server_8hpp_source.html"/>
@@ -149,8 +152,11 @@
 <a href="resource__manager_8hpp.html"/>
 <a href="client_8hpp.html"/>
 <a href="server_8hpp.html"/>
+<a href="discovery_8hpp.html"/>
 <a href="components_2generic_8hpp.html"/>
 <a href="navigation_8hpp.html"/>
+<a href="discovery__client_8hpp.html"/>
+<a href="discovery__server_8hpp.html"/>
 <a href="components_2private_2generic__client_8hpp.html"/>
 <a href="components_2private_2generic__server_8hpp.html"/>
 <a href="navigation__server_8hpp.html"/>
@@ -168,6 +174,7 @@
 <a href="group__Servo.html"/>
 <a href="group__Module.html"/>
 <a href="group__Robot.html"/>
+<a href="group__Discovery.html"/>
 <a href="structdepth__map.html"/>
 <a href="classErrorCondition.html"/>
 <a href="classGizmo.html"/>
@@ -213,6 +220,8 @@
 <a href="structviam_1_1sdk_1_1API_1_1traits_3_01Board_01_4-members.html"/>
 <a href="structviam_1_1sdk_1_1API_1_1traits_3_01Camera_01_4.html"/>
 <a href="structviam_1_1sdk_1_1API_1_1traits_3_01Camera_01_4-members.html"/>
+<a href="structviam_1_1sdk_1_1API_1_1traits_3_01Discovery_01_4.html"/>
+<a href="structviam_1_1sdk_1_1API_1_1traits_3_01Discovery_01_4-members.html"/>
 <a href="structviam_1_1sdk_1_1API_1_1traits_3_01Encoder_01_4.html"/>
 <a href="structviam_1_1sdk_1_1API_1_1traits_3_01Encoder_01_4-members.html"/>
 <a href="structviam_1_1sdk_1_1API_1_1traits_3_01Gantry_01_4.html"/>
@@ -301,6 +310,8 @@
 <a href="classviam_1_1sdk_1_1Credentials-members.html"/>
 <a href="classviam_1_1sdk_1_1DialOptions.html"/>
 <a href="classviam_1_1sdk_1_1DialOptions-members.html"/>
+<a href="classviam_1_1sdk_1_1Discovery.html"/>
+<a href="classviam_1_1sdk_1_1Discovery-members.html"/>
 <a href="classviam_1_1sdk_1_1Encoder.html"/>
 <a href="classviam_1_1sdk_1_1Encoder-members.html"/>
 <a href="structviam_1_1sdk_1_1Encoder_1_1position.html"/>
@@ -503,6 +514,10 @@
 <a href="classviam_1_1sdk_1_1impl_1_1CameraClient-members.html"/>
 <a href="classviam_1_1sdk_1_1impl_1_1CameraServer.html"/>
 <a href="classviam_1_1sdk_1_1impl_1_1CameraServer-members.html"/>
+<a href="classviam_1_1sdk_1_1impl_1_1DiscoveryClient.html"/>
+<a href="classviam_1_1sdk_1_1impl_1_1DiscoveryClient-members.html"/>
+<a href="classviam_1_1sdk_1_1impl_1_1DiscoveryServer.html"/>
+<a href="classviam_1_1sdk_1_1impl_1_1DiscoveryServer-members.html"/>
 <a href="classviam_1_1sdk_1_1impl_1_1EncoderClient.html"/>
 <a href="classviam_1_1sdk_1_1impl_1_1EncoderClient-members.html"/>
 <a href="classviam_1_1sdk_1_1impl_1_1EncoderServer.html"/>
@@ -608,6 +623,8 @@
 <a href="structviam_1_1sdk_1_1proto__convert__details_1_1from__proto__impl_3_01google_1_1protobuf_1_1Value_01_4-members.html"/>
 <a href="structviam_1_1sdk_1_1proto__convert__details_1_1from__proto__impl_3_01module_1_1v1_1_1HandlerMap_01_4.html"/>
 <a href="structviam_1_1sdk_1_1proto__convert__details_1_1from__proto__impl_3_01module_1_1v1_1_1HandlerMap_01_4-members.html"/>
+<a href="structviam_1_1sdk_1_1proto__convert__details_1_1from__proto__impl_3_01service_1_1discovery_1_1v1883fa31aeec2ffd079bc64c2f096b3d8.html"/>
+<a href="structviam_1_1sdk_1_1proto__convert__details_1_1from__proto__impl_3_01service_1_1discovery_1_1v171460a9f06685080e7992fc402e108f8.html"/>
 <a href="structviam_1_1sdk_1_1proto__convert__details_1_1to__proto__impl.html"/>
 <a href="structviam_1_1sdk_1_1proto__convert__details_1_1to__proto__impl_3_01box_01_4.html"/>
 <a href="structviam_1_1sdk_1_1proto__convert__details_1_1to__proto__impl_3_01box_01_4-members.html"/>
