deploy: 9dc21433c1ee01d0674fc94ac981b9f79fac9f81

--- a/doxygen_crawl.html
+++ b/doxygen_crawl.html
@@ -15,6 +15,8 @@
 <a href="summation_2api_8hpp_source.html"/>
 <a href="client__helper_8hpp_source.html"/>
 <a href="exception_8hpp_source.html"/>
+<a href="instance_8hpp_source.html"/>
+<a href="private_2instance_8hpp_source.html"/>
 <a href="linear__algebra_8hpp_source.html"/>
 <a href="pose_8hpp_source.html"/>
 <a href="repeated__ptr__convert_8hpp_source.html"/>
@@ -342,6 +344,10 @@
 <a href="classviam_1_1sdk_1_1GRPCException-members.html"/>
 <a href="classviam_1_1sdk_1_1HandlerMap__.html"/>
 <a href="classviam_1_1sdk_1_1HandlerMap__-members.html"/>
+<a href="classviam_1_1sdk_1_1Instance.html"/>
+<a href="classviam_1_1sdk_1_1Instance-members.html"/>
+<a href="structviam_1_1sdk_1_1Instance_1_1Impl.html"/>
+<a href="structviam_1_1sdk_1_1Instance_1_1Impl-members.html"/>
 <a href="classviam_1_1sdk_1_1LinkConfig.html"/>
 <a href="classviam_1_1sdk_1_1LinkConfig-members.html"/>
 <a href="classviam_1_1sdk_1_1MLModelService.html"/>
@@ -780,6 +786,7 @@
 <a href="functions_type.html"/>
 <a href="functions_type.html"/>
 <a href="functions_type.html"/>
+<a href="functions_enum.html"/>
 <a href="functions_enum.html"/>
 <a href="functions_enum.html"/>
 <a href="functions_enum.html"/>
