--- a/doxygen_crawl.html
+++ b/doxygen_crawl.html
@@ -31,6 +31,7 @@
 <a href="arm_8hpp_source.html"/>
 <a href="base_8hpp_source.html"/>
 <a href="board_8hpp_source.html"/>
+<a href="button_8hpp_source.html"/>
 <a href="camera_8hpp_source.html"/>
 <a href="component_8hpp_source.html"/>
 <a href="gantry_8hpp_source.html"/>
@@ -45,6 +46,8 @@
 <a href="base__server_8hpp_source.html"/>
 <a href="board__client_8hpp_source.html"/>
 <a href="board__server_8hpp_source.html"/>
+<a href="button__client_8hpp_source.html"/>
+<a href="button__server_8hpp_source.html"/>
 <a href="camera__client_8hpp_source.html"/>
 <a href="camera__server_8hpp_source.html"/>
 <a href="encoder_8hpp_source.html"/>
@@ -114,6 +117,7 @@
 <a href="arm_8hpp.html"/>
 <a href="base_8hpp.html"/>
 <a href="board_8hpp.html"/>
+<a href="button_8hpp.html"/>
 <a href="camera_8hpp.html"/>
 <a href="gantry_8hpp.html"/>
 <a href="gripper_8hpp.html"/>
@@ -127,6 +131,8 @@
 <a href="base__server_8hpp.html"/>
 <a href="board__client_8hpp.html"/>
 <a href="board__server_8hpp.html"/>
+<a href="button__client_8hpp.html"/>
+<a href="button__server_8hpp.html"/>
 <a href="camera__client_8hpp.html"/>
 <a href="camera__server_8hpp.html"/>
 <a href="encoder_8hpp.html"/>
@@ -167,6 +173,7 @@
 <a href="group__ProtoValueVisit.html"/>
 <a href="group__Arm.html"/>
 <a href="group__Base.html"/>
+<a href="group__Button.html"/>
 <a href="group__Gantry.html"/>
 <a href="group__Gripper.html"/>
 <a href="group__MovementSensor.html"/>
@@ -220,6 +227,8 @@
 <a href="structviam_1_1sdk_1_1API_1_1traits_3_01Base_01_4-members.html"/>
 <a href="structviam_1_1sdk_1_1API_1_1traits_3_01Board_01_4.html"/>
 <a href="structviam_1_1sdk_1_1API_1_1traits_3_01Board_01_4-members.html"/>
+<a href="structviam_1_1sdk_1_1API_1_1traits_3_01Button_01_4.html"/>
+<a href="structviam_1_1sdk_1_1API_1_1traits_3_01Button_01_4-members.html"/>
 <a href="structviam_1_1sdk_1_1API_1_1traits_3_01Camera_01_4.html"/>
 <a href="structviam_1_1sdk_1_1API_1_1traits_3_01Camera_01_4-members.html"/>
 <a href="structviam_1_1sdk_1_1API_1_1traits_3_01Discovery_01_4.html"/>
@@ -284,6 +293,8 @@
 <a href="structviam_1_1sdk_1_1Board_1_1Tick-members.html"/>
 <a href="structviam_1_1sdk_1_1box.html"/>
 <a href="structviam_1_1sdk_1_1box-members.html"/>
+<a href="classviam_1_1sdk_1_1Button.html"/>
+<a href="classviam_1_1sdk_1_1Button-members.html"/>
 <a href="classviam_1_1sdk_1_1Camera.html"/>
 <a href="classviam_1_1sdk_1_1Camera-members.html"/>
 <a href="structviam_1_1sdk_1_1Camera_1_1distortion__parameters.html"/>
@@ -516,6 +527,10 @@
 <a href="classviam_1_1sdk_1_1impl_1_1BoardClient-members.html"/>
 <a href="classviam_1_1sdk_1_1impl_1_1BoardServer.html"/>
 <a href="classviam_1_1sdk_1_1impl_1_1BoardServer-members.html"/>
+<a href="classviam_1_1sdk_1_1impl_1_1ButtonClient.html"/>
+<a href="classviam_1_1sdk_1_1impl_1_1ButtonClient-members.html"/>
+<a href="classviam_1_1sdk_1_1impl_1_1ButtonServer.html"/>
+<a href="classviam_1_1sdk_1_1impl_1_1ButtonServer-members.html"/>
 <a href="classviam_1_1sdk_1_1impl_1_1CameraClient.html"/>
 <a href="classviam_1_1sdk_1_1impl_1_1CameraClient-members.html"/>
 <a href="classviam_1_1sdk_1_1impl_1_1CameraServer.html"/>
