deploy: 9c65e4519446c7bd0b97146e59d514ddbaf82bc5

--- a/classviam_1_1sdk_1_1Component.html
+++ b/classviam_1_1sdk_1_1Component.html
@@ -107,6 +107,7 @@ $(function() {
 <area href="classviam_1_1sdk_1_1PowerSensor.html" alt="viam::sdk::PowerSensor" shape="rect" coords="187,840,364,864"/>
 <area href="classviam_1_1sdk_1_1Sensor.html" alt="viam::sdk::Sensor" shape="rect" coords="187,896,364,920"/>
 <area href="classviam_1_1sdk_1_1Servo.html" alt="viam::sdk::Servo" shape="rect" coords="187,952,364,976"/>
+<area href="classviam_1_1sdk_1_1Switch.html" title="A Switch represents a physical switch with multiple positions." alt="viam::sdk::Switch" shape="rect" coords="187,1008,364,1032"/>
   </map>
 </div></div>
 <table class="memberdecls">
