--- a/classviam_1_1sdk_1_1ResourceServer.html
+++ b/classviam_1_1sdk_1_1ResourceServer.html
@@ -112,6 +112,7 @@ $(function() {
 <area href="classviam_1_1sdk_1_1impl_1_1PowerSensorServer.html" title="gRPC server implementation of a PowerSensor component." alt="viam::sdk::impl::PowerSensorServer" shape="rect" coords="254,1120,498,1144"/>
 <area href="classviam_1_1sdk_1_1impl_1_1SensorServer.html" title="gRPC server implementation of a Sensor component." alt="viam::sdk::impl::SensorServer" shape="rect" coords="254,1176,498,1200"/>
 <area href="classviam_1_1sdk_1_1impl_1_1ServoServer.html" title="gRPC server implementation of a Servo component." alt="viam::sdk::impl::ServoServer" shape="rect" coords="254,1232,498,1256"/>
+<area href="classviam_1_1sdk_1_1impl_1_1SwitchServer.html" title="gRPC server implementation of a Switch component." alt="viam::sdk::impl::SwitchServer" shape="rect" coords="254,1288,498,1312"/>
   </map>
 </div></div>
 <table class="memberdecls">
