--- a/doxygen_crawl.html
+++ b/doxygen_crawl.html
@@ -70,8 +70,11 @@
 <a href="sensor__server_8hpp_source.html"/>
 <a href="servo__client_8hpp_source.html"/>
 <a href="servo__server_8hpp_source.html"/>
+<a href="switch__client_8hpp_source.html"/>
+<a href="switch__server_8hpp_source.html"/>
 <a href="sensor_8hpp_source.html"/>
 <a href="servo_8hpp_source.html"/>
+<a href="switch_8hpp_source.html"/>
 <a href="config_2resource_8hpp_source.html"/>
 <a href="resource_2resource_8hpp_source.html"/>
 <a href="handler__map_8hpp_source.html"/>
@@ -154,8 +157,11 @@
 <a href="sensor__server_8hpp.html"/>
 <a href="servo__client_8hpp.html"/>
 <a href="servo__server_8hpp.html"/>
+<a href="switch__client_8hpp.html"/>
+<a href="switch__server_8hpp.html"/>
 <a href="sensor_8hpp.html"/>
 <a href="servo_8hpp.html"/>
+<a href="switch_8hpp.html"/>
 <a href="registry_8hpp.html"/>
 <a href="resource__manager_8hpp.html"/>
 <a href="client_8hpp.html"/>
@@ -181,6 +187,7 @@
 <a href="group__PowerSensor.html"/>
 <a href="group__Sensor.html"/>
 <a href="group__Servo.html"/>
+<a href="group__Switch.html"/>
 <a href="group__Module.html"/>
 <a href="group__Robot.html"/>
 <a href="group__Discovery.html"/>
@@ -267,6 +274,8 @@
 <a href="structviam_1_1sdk_1_1API_1_1traits_3_01Servo_01_4-members.html"/>
 <a href="structviam_1_1sdk_1_1API_1_1traits_3_01Summation_01_4.html"/>
 <a href="structviam_1_1sdk_1_1API_1_1traits_3_01Summation_01_4-members.html"/>
+<a href="structviam_1_1sdk_1_1API_1_1traits_3_01Switch_01_4.html"/>
+<a href="structviam_1_1sdk_1_1API_1_1traits_3_01Switch_01_4-members.html"/>
 <a href="classviam_1_1sdk_1_1Arm.html"/>
 <a href="classviam_1_1sdk_1_1Arm-members.html"/>
 <a href="structviam_1_1sdk_1_1Arm_1_1KinematicsDataSVA.html"/>
@@ -503,6 +512,8 @@
 <a href="structviam_1_1sdk_1_1sphere-members.html"/>
 <a href="classviam_1_1sdk_1_1Stoppable.html"/>
 <a href="classviam_1_1sdk_1_1Stoppable-members.html"/>
+<a href="classviam_1_1sdk_1_1Switch.html"/>
+<a href="classviam_1_1sdk_1_1Switch-members.html"/>
 <a href="structviam_1_1sdk_1_1translation.html"/>
 <a href="structviam_1_1sdk_1_1translation-members.html"/>
 <a href="structviam_1_1sdk_1_1Vector3.html"/>
@@ -595,6 +606,10 @@
 <a href="classviam_1_1sdk_1_1impl_1_1ServoClient-members.html"/>
 <a href="classviam_1_1sdk_1_1impl_1_1ServoServer.html"/>
 <a href="classviam_1_1sdk_1_1impl_1_1ServoServer-members.html"/>
+<a href="classviam_1_1sdk_1_1impl_1_1SwitchClient.html"/>
+<a href="classviam_1_1sdk_1_1impl_1_1SwitchClient-members.html"/>
+<a href="classviam_1_1sdk_1_1impl_1_1SwitchServer.html"/>
+<a href="classviam_1_1sdk_1_1impl_1_1SwitchServer-members.html"/>
 <a href="structviam_1_1sdk_1_1proto__convert__details_1_1from__proto__impl.html"/>
 <a href="structviam_1_1sdk_1_1proto__convert__details_1_1from__proto__impl_3_01app_1_1v1_1_1ComponentConfig_01_4.html"/>
 <a href="structviam_1_1sdk_1_1proto__convert__details_1_1from__proto__impl_3_01app_1_1v1_1_1ComponentConfig_01_4-members.html"/>
