--- a/doxygen_crawl.html
+++ b/doxygen_crawl.html
@@ -777,6 +777,7 @@
 <a href="functions_t.html"/>
 <a href="functions_v.html"/>
 <a href="functions_w.html"/>
+<a href="functions_~.html"/>
 <a href="functions_func.html"/>
 <a href="functions_func_b.html"/>
 <a href="functions_func_c.html"/>
@@ -796,6 +797,7 @@
 <a href="functions_func_s.html"/>
 <a href="functions_func_t.html"/>
 <a href="functions_func_w.html"/>
+<a href="functions_func_~.html"/>
 <a href="functions_vars.html"/>
 <a href="functions_vars.html"/>
 <a href="functions_vars.html"/>
