deploy: 565cf4ca75b8863c370f4234d112091d838e64a0

--- a/doxygen_crawl.html
+++ b/doxygen_crawl.html
@@ -667,6 +667,10 @@
 <a href="structviam_1_1sdk_1_1proto__convert__details_1_1from__proto__impl_3_01google_1_1protobuf_1_1Value_01_4-members.html"/>
 <a href="structviam_1_1sdk_1_1proto__convert__details_1_1from__proto__impl_3_01module_1_1v1_1_1HandlerMap_01_4.html"/>
 <a href="structviam_1_1sdk_1_1proto__convert__details_1_1from__proto__impl_3_01module_1_1v1_1_1HandlerMap_01_4-members.html"/>
+<a href="structviam_1_1sdk_1_1proto__convert__details_1_1from__proto__impl_3_01robot_1_1v1_1_1FrameSystemConfig_01_4.html"/>
+<a href="structviam_1_1sdk_1_1proto__convert__details_1_1from__proto__impl_3_01robot_1_1v1_1_1FrameSystemConfig_01_4-members.html"/>
+<a href="structviam_1_1sdk_1_1proto__convert__details_1_1from__proto__impl_3_01robot_1_1v1_1_1Operation_01_4.html"/>
+<a href="structviam_1_1sdk_1_1proto__convert__details_1_1from__proto__impl_3_01robot_1_1v1_1_1Operation_01_4-members.html"/>
 <a href="structviam_1_1sdk_1_1proto__convert__details_1_1from__proto__impl_3_01service_1_1discovery_1_1v1883fa31aeec2ffd079bc64c2f096b3d8.html"/>
 <a href="structviam_1_1sdk_1_1proto__convert__details_1_1from__proto__impl_3_01service_1_1discovery_1_1v171460a9f06685080e7992fc402e108f8.html"/>
 <a href="structviam_1_1sdk_1_1proto__convert__details_1_1to__proto__impl.html"/>
