deploy: 8d813edc5cef2c395a3365da9444703ad987af21

--- a/server_8hpp.html
+++ b/server_8hpp.html
@@ -83,7 +83,8 @@ $(function() {
 
 <p>Defines the <code>Server</code> class.  
 <a href="#details">More...</a></p>
-<div class="textblock"><code>#include &lt;viam/sdk/common/grpc_fwd.hpp&gt;</code><br />
+<div class="textblock"><code>#include &lt;chrono&gt;</code><br />
+<code>#include &lt;viam/sdk/common/grpc_fwd.hpp&gt;</code><br />
 <code>#include &lt;viam/sdk/resource/resource.hpp&gt;</code><br />
 <code>#include &lt;viam/sdk/resource/resource_api.hpp&gt;</code><br />
 <code>#include &lt;viam/sdk/resource/resource_server_base.hpp&gt;</code><br />
