deploy: d7ac685d2dfc3cdb0ac9677bf43c2800a6fb8d2f

--- a/doxygen_crawl.html
+++ b/doxygen_crawl.html
@@ -364,6 +364,8 @@
 <a href="classviam_1_1sdk_1_1GeometryConfig-members.html"/>
 <a href="classviam_1_1sdk_1_1Gripper.html"/>
 <a href="classviam_1_1sdk_1_1Gripper-members.html"/>
+<a href="structviam_1_1sdk_1_1Gripper_1_1holding__status.html"/>
+<a href="structviam_1_1sdk_1_1Gripper_1_1holding__status-members.html"/>
 <a href="classviam_1_1sdk_1_1GRPCException.html"/>
 <a href="classviam_1_1sdk_1_1GRPCException-members.html"/>
 <a href="classviam_1_1sdk_1_1HandlerMap__.html"/>
